traveltrack-api/kyverno/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
    - name: require-nonlatest
      match:
        resources:
          kinds:
            - Pod
            - Deployment
      validate:
        message: Image tag latest is not allowed
        pattern:
          spec:
            containers:
              - image: "!*:latest"
