traveltrack-api/kyverno/disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root
spec:
  validationFailureAction: Enforce
  rules:
    - name: no-root
      match:
        resources:
          kinds:
            - Pod
            - Deployment
      validate:
        message: Containers must run as non-root
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
